update tests and fix bugs

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,14 @@
     {% include 'components/header.html' %}
     
     <main class="container">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="flash-message">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        
         {% block content %}{% endblock %}
     </main>
     
