--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -1,12 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>ONIX HUB</h1>
-<div class="products">
-    {% for product in featured_products %}
-        <div class="product">
-            <h2>{{ product.name }}</h2>
+<div class="featured-products">
+    <h2>Рекомендуемые товары</h2>
+    <div class="products-grid">
+        {% for product in featured_products %}
+        <div class="product-card">
+            <h3>{{ product.name }}</h3>
+            <p class="price">{{ product.price }} ₽</p>
+            <p>{{ product.description }}</p>
+            <a href="{{ url_for('main.product', product_id=product.id) }}" class="btn">Подробнее</a>
         </div>
-    {% endfor %}
+        {% endfor %}
+    </div>
 </div>
 {% endblock %} 
