--- a/app/templates/pages/product.html
+++ b/app/templates/pages/product.html
@@ -1,5 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>{{ product.name }}</h1>
+<div class="product-details">
+    <h1>{{ product.name }}</h1>
+    <div class="product-info">
+        <p class="price">{{ product.price }} ₽</p>
+        <p class="description">{{ product.description }}</p>
+        {% if product.is_in_stock %}
+            <p class="stock">В наличии: {{ product.stock }} шт.</p>
+            <button class="btn btn-primary">Добавить в корзину</button>
+        {% else %}
+            <p class="out-of-stock">Нет в наличии</p>
+        {% endif %}
+    </div>
+</div>
 {% endblock %} 
