--- a/app/templates/pages/catalog.html
+++ b/app/templates/pages/catalog.html
@@ -1,5 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Каталог</h1>
+<div class="catalog">
+    <h1>Каталог</h1>
+    <div class="products-grid">
+        {% for product in products %}
+        <div class="product-card">
+            <h3>{{ product.name }}</h3>
+            <p class="price">{{ product.price }} ₽</p>
+            <p class="description">{{ product.description }}</p>
+            <a href="{{ url_for('main.product', product_id=product.id) }}" class="btn">Подробнее</a>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %} 
